[project]
name = "agent-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.7",
    "jieba>=0.42.1",
    "langgraph>=1.1.6",
    "litellm>=1.83.0",
    "magika>=0.6.2",
    "markitdown>=0.1.5",
    "onnxruntime>=1.24.4",
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
]
